--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,3 +77,7 @@ input:-webkit-autofill:active {
     box-shadow: 0 0 0 30px #f3f3f3 inset !important;
     -webkit-text-fill-color: rgba(0, 0, 0, 0.87) !important;
 }
+
+#root {
+  padding: 0;
+}
